# lab-screenshot

./: .gitignore  BUILD_PLAN.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  ui_pattern.md
docs/: LESSONS-LEARNED.md  SOLUTION-OVERVIEW.md
enablement-drift/: .env.example  .gitignore  recording-log.jsonl  recording-viewer.html
enablement-drift/guides/: seeded-drift-guide.md
enablement-drift/policy/: default.yaml
enablement-drift/src/drift_bot/: cli.py  config.py
enablement-drift/src/drift_bot/agents/: comparator.py  interpreter.py  navigator.py
enablement-drift/src/drift_bot/models/: capture.py  expectations.py  findings.py
enablement-drift/test-results/: expectations.yaml  summary_report.md
enablement-drift/tests/: test_pipeline.py
lab_screenshot/: app.py  browser_agent.py  cli.py  frame_selector.py  guide.py  recorder.py  screenshot.py
packaging/: README.md  build-macos-pkg.sh
tests/: brute-force-guide-output.md  brute-force-guide.md  mock-lab-guide.md  mock_lab_server.py  mock_okta_server.py  okta-policy-guide.md  outputTest2.md  run_multi_tab_test.py  run_sample_guide.py  sample-guide-output.md  sample-guide.md  test_guide.py
